# weakmind

./: Cargo.toml  runmyplayer
player/: Cargo.toml
player/src/: client.rs  common.rs  main.rs  player.rs  util.rs
zerosumrs/: Cargo.toml
zerosumrs/src/: ai.rs  default_heuristic.rs  game.rs  heuristic.rs  lib.rs  minimax_final.rs  minimax_fixed.rs  minimax_hard.rs  minimax_killer.rs  minimax_killer_b.rs  minimax_simple.rs  monte_carlo_total.rs  monte_carlo_tree_search.rs  old_tablut.rs  tablut.rs
