[package]
name = "tablut"
version = "0.1.0"
authors = ["Giacomo Pasini <giacomo.pasini@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
structopt = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json", "serde_json" ] }
tokio-util = { version = "0.6", features = ["codec"]}
zerosumrs = { path = "../zerosumrs"}
reqwest = "*"
log = "*"
futures = "*"
bytes = "*"
stderrlog = "*"
strum = "0.20"
strum_macros = "0.20"